<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_dark"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/headerImage"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:src="@drawable/profile_header"
                android:scaleType="centerCrop"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                />

            <android.support.v7.widget.CardView
                android:id="@+id/circleView"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:elevation="12dp"
                app:cardCornerRadius="75dp"
                android:layout_marginTop="75dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_centerHorizontal="true">
                <ImageView
                    android:id="@+id/profileImage"
                    android:layout_height="150dp"
                    android:layout_width="match_parent"
                    android:src="@drawable/profile_image"
                    android:scaleType="centerCrop"/>
            </android.support.v7.widget.CardView>

            <TextView
                android:id="@+id/profileName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/profileName"
                android:textAlignment="center"
                android:textSize="30dp"
                android:textColor="@android:color/white"
                app:layout_constraintTop_toBottomOf="@id/circleView"
                tools:layout_editor_absoluteX="0dp" />

            <TextView
                android:id="@+id/profileTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/profileTitle"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="15dp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/profileName"
                tools:layout_editor_absoluteX="0dp" />
            <TextView
                android:id="@+id/profileSubTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12dp"
                android:textColor="@android:color/white"
                android:text="@string/ProfileSubTitle"
                android:textAlignment="center"
                app:layout_constraintTop_toBottomOf="@id/profileTitle"
                android:layout_marginTop="3dp"
                />

            <View
                android:id="@+id/profileLine"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                app:layout_constraintTop_toBottomOf="@id/profileSubTitle"
                android:background="@android:color/background_light"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                />

            <TextView
                android:id="@+id/profileShortSummary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="13dp"
                android:text="@string/profileSummary"
                app:layout_constraintTop_toBottomOf="@id/profileLine"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"

                />
            <View
                android:id="@+id/profileLine2"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                app:layout_constraintTop_toBottomOf="@id/profileShortSummary"
                android:background="@android:color/background_light"
                android:layout_marginTop="5dp"

                />

            <TextView
                android:id="@+id/profileExperienceTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Experience:"
                android:textColor="@android:color/white"

                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/profileLine2"
                android:layout_marginTop="50dp"
                android:layout_marginLeft="10dp"
                />

            <ImageView
                android:id="@+id/tidbtLogo"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/tidbt_logo"
                app:layout_constraintLeft_toLeftOf="@id/profileExperienceTitle"
                app:layout_constraintTop_toBottomOf="@id/profileExperienceTitle"
                android:layout_marginTop="10dp"
                />

            <TextView
                android:id="@+id/profileExperience1Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="Lead iOS Engineer"
                android:textColor="@android:color/white"
                app:layout_constraintLeft_toRightOf="@id/tidbtLogo"
                app:layout_constraintTop_toBottomOf="@id/profileExperienceTitle"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="25dp"
                />

            <TextView
                android:id="@+id/profileExperienceCompanyName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Tidbt Technologies LLC"
                android:textSize="13dp"
                android:textColor="@android:color/white"
                app:layout_constraintLeft_toRightOf="@id/tidbtLogo"
                app:layout_constraintTop_toBottomOf="@id/profileExperience1Title"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="3dp"
                />

            <TextView
                android:id="@+id/profileExperienceDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Dec 2017 - Present • 1yr 5 mos\nGreater Chicago Area"
                android:textSize="13dp"
                android:textColor="@android:color/darker_gray"
                app:layout_constraintLeft_toRightOf="@id/tidbtLogo"
                app:layout_constraintTop_toBottomOf="@id/profileExperienceCompanyName"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="3dp"
                />

            <TextView
                android:id="@+id/profileExperienceAbout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/experienceSummary"
                android:textColor="@android:color/white"
                app:layout_constraintTop_toBottomOf="@id/profileExperienceDate"
                android:layout_marginLeft="90dp"
                android:layout_marginRight="10dp"
                />

            <View
                android:id="@+id/profileEducationLine"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                app:layout_constraintTop_toBottomOf="@id/profileExperienceAbout"
                android:background="@android:color/background_light"
                android:layout_marginTop="20dp"

                />

            <TextView
                android:id="@+id/profileEducationTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Education:"
                android:textColor="@android:color/white"

                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/profileEducationLine"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="10dp"
                />

            <ImageView
                android:id="@+id/uicLogo"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/uic_logo"
                app:layout_constraintLeft_toLeftOf="@id/profileExperienceTitle"
                app:layout_constraintTop_toBottomOf="@id/profileEducationTitle"
                android:layout_marginTop="10dp"
                />

            <TextView
                android:id="@+id/profileEducationSchool"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="University Of Illinois at Chicago"
                android:textColor="@android:color/white"
                app:layout_constraintLeft_toRightOf="@id/uicLogo"
                app:layout_constraintTop_toBottomOf="@id/profileEducationTitle"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="18dp"
                />

            <TextView
                android:id="@+id/profileEducationDegree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Bachelor's degree, Computer Science"
                android:textSize="13dp"
                android:textColor="@android:color/white"
                app:layout_constraintLeft_toRightOf="@id/uicLogo"
                app:layout_constraintTop_toBottomOf="@id/profileEducationSchool"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="3dp"
                />

            <TextView
                android:id="@+id/profileEducationDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2016 - 2019"
                android:textSize="13dp"
                android:textColor="@android:color/darker_gray"
                app:layout_constraintLeft_toRightOf="@id/uicLogo"
                app:layout_constraintTop_toBottomOf="@id/profileEducationDegree"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="3dp"
                android:paddingBottom="10dp"
                />

        </android.support.constraint.ConstraintLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>